// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectionRecoveryRequest activated recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <AccountProtectionFrame
    type="activated"
  />
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest active recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <AccountProtectionFrame
    type="activated"
  />
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  subTitle="Recovery process status"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <AccountProtectionFrame
    type="pending"
  />
</FullWidthPane>
`;
